[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jspl_hsm_coil_id_mappin"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ripik_ds" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["jspl_hsm_coil_id_mappin"]
force_sort_within_sections = true
